{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 21,
  "lineage": "1a2208b2-bcbc-a0f6-38bc-76ae5d63d9a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "LEBARCEBIEN-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa27f96174231288",
            "domain": "vpc",
            "id": "eipalloc-0fa27f96174231288",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-188-211-23.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.211.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LEBARCEBIEN-INSTANCE-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0c135f6834b12e489",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c135f6834b12e489",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3b26cec5c119ec5",
            "private_dns": "ip-10-0-1-241.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.241",
            "public_ip": "13.37.241.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02b870a1c5006fff3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08ead3e0b6006caab"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce9e1829693decaf",
            "tags": {
              "Name": "LEBARCEBIEN-INSTANCE-ADMIN"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-INSTANCE-ADMIN"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ead3e0b6006caab"
            ]
          },
          "dependencies": [
            "aws_security_group.LEBARCEBIEN-SG-ADMIN",
            "aws_subnet.LEBARCEBIEN-PUB-SUBNET",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LEBARCEBIEN-INSTANCE-PRIV1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LEBARCEBIEN-INSTANCE-PRIV2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LEBARCEBIEN-INSTANCE-PRIV3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "LEBARCEBIEN-INSTANCE-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "LEBARCEBIEN-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-05f48fd98da7b05bd",
            "id": "igw-05f48fd98da7b05bd",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "LEBARCEBIEN-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa27f96174231288",
            "association_id": "eipassoc-08eeff239010cbb0a",
            "connectivity_type": "public",
            "id": "nat-034e7c96237c50855",
            "network_interface_id": "eni-003abf13035dbe274",
            "private_ip": "10.0.1.246",
            "public_ip": "15.188.211.23",
            "subnet_id": "subnet-0ce9e1829693decaf",
            "tags": {
              "Name": "LEBARCEBIEN-NAT-GTW"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.LEBARCEBIEN-EIP",
            "aws_internet_gateway.LEBARCEBIEN-IGW",
            "aws_subnet.LEBARCEBIEN-PUB-SUBNET",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "LEBARCEBIEN-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f48fd98da7b05bd",
            "id": "r-rtb-06308c1620ba839521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06308c1620ba83952",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.LEBARCEBIEN-IGW",
            "aws_internet_gateway_attachment.LEBARCEBIEN-IGW-ATTACHMENT",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LEBARCEBIEN-ROUTE-PRIV",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0eb6c56d25d11530e",
            "id": "rtb-0eb6c56d25d11530e",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-034e7c96237c50855",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LEBARCEBIEN-ROUTE-PRIV"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-ROUTE-PRIV"
            },
            "timeouts": null,
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.LEBARCEBIEN-EIP",
            "aws_internet_gateway.LEBARCEBIEN-IGW",
            "aws_nat_gateway.LEBARCEBIEN-NAT-GTW",
            "aws_subnet.LEBARCEBIEN-PUB-SUBNET",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "LEBARCEBIEN-ROUTE-PUB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0195d48e6d780e142",
            "id": "rtb-0195d48e6d780e142",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f48fd98da7b05bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "LEBARCEBIEN-ROUTE1"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.LEBARCEBIEN-IGW",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEBARCEBIEN-RTB-ASSOC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb1d169154a13feb",
            "route_table_id": "rtb-0eb6c56d25d11530e",
            "subnet_id": "subnet-0ffcc1c8fd49343f5"
          },
          "dependencies": [
            "aws_eip.LEBARCEBIEN-EIP",
            "aws_internet_gateway.LEBARCEBIEN-IGW",
            "aws_nat_gateway.LEBARCEBIEN-NAT-GTW",
            "aws_route_table.LEBARCEBIEN-ROUTE-PRIV",
            "aws_subnet.LEBARCEBIEN-PRIV-SUBNET1",
            "aws_subnet.LEBARCEBIEN-PUB-SUBNET",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEBARCEBIEN-RTB-ASSOC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bc888225a5d1b85",
            "route_table_id": "rtb-0eb6c56d25d11530e",
            "subnet_id": "subnet-02d046e1a17b1d66c"
          },
          "dependencies": [
            "aws_eip.LEBARCEBIEN-EIP",
            "aws_internet_gateway.LEBARCEBIEN-IGW",
            "aws_nat_gateway.LEBARCEBIEN-NAT-GTW",
            "aws_route_table.LEBARCEBIEN-ROUTE-PRIV",
            "aws_subnet.LEBARCEBIEN-PRIV-SUBNET2",
            "aws_subnet.LEBARCEBIEN-PUB-SUBNET",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "LEBARCEBIEN-RTB-ASSOC3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099eb5338583d7926",
            "route_table_id": "rtb-0eb6c56d25d11530e",
            "subnet_id": "subnet-0fcbb1d09593a516b"
          },
          "dependencies": [
            "aws_eip.LEBARCEBIEN-EIP",
            "aws_internet_gateway.LEBARCEBIEN-IGW",
            "aws_nat_gateway.LEBARCEBIEN-NAT-GTW",
            "aws_route_table.LEBARCEBIEN-ROUTE-PRIV",
            "aws_subnet.LEBARCEBIEN-PRIV-SUBNET3",
            "aws_subnet.LEBARCEBIEN-PUB-SUBNET",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEBARCEBIEN-SG-ADMIN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-08ead3e0b6006caab",
            "description": "LEBARCEBIEN-SG-ADMIN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ead3e0b6006caab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "LEBARCEBIEN-SG1-ALLOW-SSH-FROM-EXT",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LEBARCEBIEN-SG-ADMIN",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LEBARCEBIEN-SG-ADMIN"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-SG-ADMIN"
            },
            "timeouts": null,
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEBARCEBIEN-SG-PRIV-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-08656ddd6d3844b06",
            "description": "LEBARCEBIEN-SG-PRIV-WEB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08656ddd6d3844b06",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALLOW-SSH-FROM-ADMIN-TO-PRIV",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ead3e0b6006caab"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "LEBARCEBIEN-SG-ALLOW-WEB-TO-REVERSE",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b6e4c23692e8679"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LEBARCEBIEN-SG-PRIV-WEB",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LEBARCEBIEN-SG-PRIV-WEB"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-SG-PRIV-WEB"
            },
            "timeouts": null,
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LEBARCEBIEN-SG-ADMIN",
            "aws_security_group.LEBARCEBIEN-SG-REVERSE",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LEBARCEBIEN-SG-REVERSE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-04b6e4c23692e8679",
            "description": "LEBARCEBIEN-SG-REVERSE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b6e4c23692e8679",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "LEBARCEBIEN-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "LEBARCEBIEN-SG-REVERSE-ALLOW-SSH-FROM-ADMIN",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08ead3e0b6006caab"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "LEBARCEBIEN-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "LEBARCEBIEN-SG-REVERSE"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-SG-REVERSE"
            },
            "timeouts": null,
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LEBARCEBIEN-SG-ADMIN",
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEBARCEBIEN-PRIV-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0ffcc1c8fd49343f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffcc1c8fd49343f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEBARCEBIEN-PRIV-SUBNET1"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-PRIV-SUBNET1"
            },
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "dependencies": [
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEBARCEBIEN-PRIV-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-02d046e1a17b1d66c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d046e1a17b1d66c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEBARCEBIEN-PRIV-SUBNET2"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-PRIV-SUBNET2"
            },
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "dependencies": [
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEBARCEBIEN-PRIV-SUBNET3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0fcbb1d09593a516b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcbb1d09593a516b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEBARCEBIEN-PRIV-SUBNET3"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-PRIV-SUBNET3"
            },
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "dependencies": [
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "LEBARCEBIEN-PUB-SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0ce9e1829693decaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce9e1829693decaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LEBARCEBIEN-PUB-SUBNET"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-PUB-SUBNET"
            },
            "vpc_id": "vpc-07636e7b4c5886047"
          },
          "dependencies": [
            "aws_vpc.LEBARCEBIEN-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "LEBARCEBIEN-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-07636e7b4c5886047",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de5fd5c9b1b239f8",
            "default_route_table_id": "rtb-06308c1620ba83952",
            "default_security_group_id": "sg-0b6c77689daa21b1c",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07636e7b4c5886047",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06308c1620ba83952",
            "owner_id": "962615889483",
            "tags": {
              "Name": "LEBARCEBIEN-VPC"
            },
            "tags_all": {
              "Name": "LEBARCEBIEN-VPC"
            }
          }
        }
      ]
    }
  ]
}